# yourballot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml
images/: nginx.conf
k8s/cert-manager/: issuer-staging.yaml
k8s/gocd/: gocd-ingress.yaml  values.yaml
k8s/postgres/: values.yaml
k8s/postgres/environments/: production.yaml  staging.yaml
k8s/postgres/one-offs/: production-pvc.yaml  staging-pvc.yaml
k8s/postgres/templates/: db.yaml
k8s/yourballot/: Chart.yaml  values.yaml
k8s/yourballot/environments/: production.yaml  staging.yaml
k8s/yourballot/templates/: NOTES.txt  _helpers.tpl  api.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
local/: nginx.conf
scripts/: entrypoint.sh
yourballot/: settings.py  urls.py
yourballot/api/: #router.py#  .#router.py  router.py
yourballot/api/core/: pagination.py  response.py
yourballot/api/serializers/: locality.py  question.py  voter.py
yourballot/api/tests/: core.py  test_all_questions.py  test_auth_candidate_detailed.py  (+8 more)
yourballot/candidate/: admin.py  apps.py
yourballot/core/: admin.py  apps.py
yourballot/issue/: admin.py  apps.py  loader.py
yourballot/locality/: admin.py  apps.py
yourballot/party/: __init__.py  political_party.py  tendency.py
yourballot/provider/: congress_district_geo.py  core.py
yourballot/similarity/: apps.py  similarity.py  vector.py
yourballot/voter/: admin.py  apps.py  exceptions.py  service.py
yourballot/yourballot/: asgi.py  settings.py  urls.py  wsgi.py
(+133 files in other folders)
